# paladium

./: .gitignore  README.md  cli.py  generate_model.py  image_processor.py  pyproject.toml  video_processor.py
utils/: file_io.py  ocr.py  plate_data.py  preprocessing.py  tracking.py  vehicle_data.py
