[project]
name = "paladium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "easyocr>=1.7.2",
    "fast-plate-ocr>=0.3.0",
    "ffmpeg>=1.4",
    "matplotlib>=3.10.0",
    "onnx>=1.17.0",
    "pytesseract>=0.3.13",
    "sahi>=0.11.20",
    "transformers>=4.48.3",
    "ultralytics>=8.3.75",
    "yolov5>=7.0.14",
    "yt-dlp>=2025.1.26",
]
